--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
+    "nodemon": "^2.0.22",
     "request": "^2.88.2",
     "sharp": "^0.29.2",
     "socket.io": "^4.4.0",
